# GammaGo

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  gamma_go_main  launch_server.sh
go/: .CUDABoard.cu.swp  .GoGtpEngine.cpp.swp  CUDABoard.cu  CUDABoard.h  GoBitBlock.cpp  GoBitBlock.h  GoBitBoard.cpp  GoBitBoard.h  GoGlobal.h  GoGtpEngine.cpp  GoGtpEngine.h
